--- a/WEEK9/0610DAY2/package.json
+++ b/WEEK9/0610DAY2/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mime": "^2.3.1"
+    "mime": "^2.3.1",
+    "qs": "^6.5.2"
   }
 }
