--- a/WEEK11/day2/package.json
+++ b/WEEK11/day2/package.json
@@ -34,6 +34,7 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "raf": "3.4.0",
     "react": "^16.4.1",
