--- a/WEEK12/day3/package.json
+++ b/WEEK12/day3/package.json
@@ -31,6 +31,7 @@
     "jest": "20.0.4",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
