--- a/WEEK12/KETANG/package.json
+++ b/WEEK12/KETANG/package.json
@@ -4,6 +4,22 @@
   "private": true,
   "dependencies": {
     "antd": "^3.6.4",
+    "moment": "^2.22.2",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
+    "prop-types": "^15.6.2",
+    "qs": "^6.5.2",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "react-redux": "^5.0.7",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
+    "axios": "^0.18.0",
+    "blueimp-md5": "^2.10.0",
+    "react-swipe": "^5.1.1",
+    "swipe-js-iso": "^2.0.4",
+    "react-transition-group": "^2.2.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -28,25 +44,14 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
-    "less": "^3.0.4",
-    "less-loader": "^4.1.0",
-    "moment": "^2.22.2",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
-    "prop-types": "^15.6.2",
-    "qs": "^6.5.2",
     "raf": "3.4.0",
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-promise": "^0.6.0",
-    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -54,12 +59,7 @@
     "webpack": "3.8.1",
     "webpack-dev-server": "2.9.4",
     "webpack-manifest-plugin": "1.3.2",
-    "whatwg-fetch": "2.0.3",
-    "axios": "^0.18.0",
-    "blueimp-md5": "^2.10.0",
-    "react-swipe": "^5.1.1",
-    "swipe-js-iso": "^2.0.4",
-    "react-transition-group": "^2.2.1"
+    "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
