其它跨域方式的处理

--- a/公开课/跨域/package.json
+++ b/公开课/跨域/package.json
@@ -11,6 +11,7 @@
     "express": "^4.16.3",
     "express-session": "^1.15.6",
     "jquery": "1.11.3",
-    "qs": "^6.5.2"
+    "qs": "^6.5.2",
+    "request": "^2.87.0"
   }
 }
